Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -11,5 +11,8 @@
     <p>Lorem ipsum dolor sit amet consectectur adipliscing elit.
         Recursandae officia tempora expedita perspiciatis itaque adipisci ipsam et quisquam possimus,
         quos facillis omnis veritatis exercitationem. Assumenda laudantium est eos quidem dicta?<p>
+    <p>Lorem ipsum dolor sit amet consectectur adipliscing elit.
+        Recursandae officia tempora expedita perspiciatis itaque adipisci ipsam et quisquam possimus,
+        quos facillis omnis veritatis exercitationem. Assumenda laudantium est eos quidem dicta?</p>
 <body>
 <html>
